--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/126/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/126/index.mdx
@@ -49,17 +49,47 @@ Vous pouvez commencer ici: [flycode.com/developers](https://www.flycode.com/deve
 
 ## ⚛️ React {#react}
 
+[Is React going anywhere?](https://www.infoxicator.com/is-react-going-anywhere)
+
+[How to settle the React memoization debate](https://medium.com/front-end-weekly/how-to-use-memoization-in-react-6ac93c00418c)
+
 [react-three-editor](https://github.com/pmndrs/react-three-editor) - https://twitter.com/0xca0a/status/1597204327873286144
+
+[Eleventy vs Next.js](https://cloudcannon.com/blog/eleventy-vs-next-js/) + https://dev.to/cloudcannon/eleventy-vs-nextjs-30i8
+
+[Progressively enhance the useFetcher hook in Remix](https://sergiodxa.com/articles/progressively-enhance-the-usefetcher-hook-in-remix)
 
 Remix Deferred overview? https://twitter.com/ebey_jacob/status/1596927214712680448
 
 [Solid Final Form – Proof of Concept](https://erikras.com/blog/solid-final-form-poc)
+
+[Improving React Interaction Times by 4x](https://www.causal.app/blog/react-perf)
+
+[Minimal TypeScript Crash Course For React](https://profy.dev/article/react-typescript)
+
+[Data Structures In Frontend JavaScript In The Real World - With React Code Examples](https://profy.dev/article/javascript-data-structures)
+
+[How to update the state of a sibling component in React?](https://alexsidorenko.com/blog/react-siblings/)
 
 tRPC contributing to Remix: https://twitter.com/s4chinraja/status/1596601501887082496 + https://twitter.com/alexdotjs/status/1596604718700466176
 
 React is simple? https://twitter.com/kentcdodds/status/1596516282181963776
 
 Remix progressive enhancement form upload - https://twitter.com/ebey_jacob/status/1596223682246234113
+
+Plasmo extensions? https://blog.plasmo.com/p/migrating-chrome-extension-to-plasmo
+
+[Storybook for full-stack developers](https://storybook.js.org/blog/storybook-for-full-stack-developers/)
+
+[RTK Query Basics: Query Endpoints, Data Flow and TypeScript](https://egghead.io/courses/rtk-query-basics-query-endpoints-data-flow-and-typescript-57ea3c43) + https://twitter.com/phry/status/1595458802001879041
+
+[React Dev, You Need To Know @container!](https://www.youtube.com/watch?v=ypN-Uwshc5M)
+
+[Reactjs Protected Route](https://dev.to/collins87mbathi/reactjs-protected-route-m3j)
+
+[Gatsby 5.1](https://www.gatsbyjs.com/docs/reference/release-notes/v5.1/)
+
+[Ant Design 5.0](https://github.com/ant-design/ant-design/releases/tag/5.0.0) + https://ant.design/docs/blog/css-in-js
 
 <SubscribeFormEmbed />
 
@@ -87,7 +117,13 @@ Le meilleur ? Tout le monde peut [commencer gratuitement](https://www.yuzu.dev/p
 
 ## 📱 React-Native {#react-native}
 
+[What We Learned from Open-Sourcing FlashList](https://shopify.engineering/what-we-learned-from-open-sourcing-flashlist)
+
+[React Native Core Contributor Summit 2022](https://reactnative.dev/blog/2022/11/22/react-native-core-contributor-summit-2022)
+
 [Shopify - Our Solution for Measuring React Native Rendering Times](https://shopify.engineering/measuring-react-native-rendering-times) + https://twitter.com/davebcn87/status/1595819683311226880
+
+[React Native in 2022 and Beyond](https://semaphoreci.com/blog/react-native)
 
 setNativeProps back? https://twitter.com/o_kwasniewski/status/1596090790350303233
 
@@ -96,6 +132,14 @@ setNativeProps back? https://twitter.com/o_kwasniewski/status/159609079035030323
 [React Native Windows 0.69.14](https://github.com/microsoft/react-native-windows/releases/tag/react-native-windows_v0.69.14)
 
 Frame processing: https://twitter.com/mrousavy/status/1595746972190883840
+
+https://stackoverflow.blog/2022/10/31/comparing-frameworks-for-cross-platform-apps-flutter-vs-react-native/
+
+[How react-native became performant as native with the new architecture](https://medium.com/ocp-digital-factory/how-react-native-became-performant-as-native-with-the-new-architecture-6e678c3178aa)
+
+[How to build a React Native app 5x faster with Nitro](https://blog.nitro.build/how-to-build-a-react-native-app-5x-faster-with-nitro-d7e512b18d90)
+
+[VisionCamera Frame Processor + Skia - Censor faces demo](https://twitter.com/mrousavy/status/1595746972190883840)
 
 ---
 
@@ -115,11 +159,10 @@ Nous cherchons des développeurs(euses) JavaScript passionnés. Vous interviendr
 
 ## 🇫🇷 En français {#fr}
 
-Pas de contenu cette semaine 😅
+- [Galerie d'images en React et Three.js](https://www.youtube.com/watch?v=Jqo63Oxq0Ng)
+- [La Roadmap React Parfaite pour 2023](https://www.youtube.com/watch?v=GMrrm3v2WGI)
 
 💡Tu peux m'envoyer ton contenu: [sebastien@thisweekinreact.com](mailto:sebastien@thisweekinreact.com?subject=Contenu%20en%20fran%C3%A7ais) !
-
-<Todo />
 
 ---
 
@@ -129,15 +172,40 @@ ESLint rewrite? https://twitter.com/kentcdodds/status/1595860611963170816
 
 [Octoverse 2022 - The state of open source software](https://octoverse.github.com/)
 
+[Advanced web font optimization techniques](https://pixelpoint.io/blog/advanced-web-font-optimization-techniques/)
+
+- [Agenda for the 93rd meeting of Ecma TC39](https://github.com/tc39/agendas/blob/main/2022/11.md): un meeting est en cours! Des nouvelles pour la semaine prochaine. La nouvelle proposal [Async Context](https://github.com/legendecas/proposal-async-context) m'intéresse particulièrement!
+- [A first look at SolidStart](https://ajcwebdev.com/2022/11/20/a-first-look-at-solidstart/)
+- [How to split JavaScript strings into sentences, words or graphemes with "Intl.Segmenter"](https://www.stefanjudis.com/today-i-learned/how-to-split-javascript-strings-with-intl-segmenter/)
+- [How we lost our slick new npm package name (and then got it back)](https://reactflow.dev/blog/reactflow-npm-package-name/)
+- [JavaScript from ES6 to ES12 in 2022](https://medium.com/@bluetch/javascript-es6-es7-es8-es9-es10-es11-and-es12-519d8be7d48c)
+- [Color Formats in CSS](https://www.joshwcomeau.com/css/color-formats/)
 - [TypeScript 5.0 is coming...](https://www.youtube.com/watch?v=PTU-H6Wwbh8)
 - [The Complete Guide to the Fastify Plugin System](https://www.nearform.com/blog/complete-guide-fastify-plugin-system/)
-
-<Todo />
+- [GitHub Copilot CLI](https://githubnext.com/projects/copilot-cli/)
+- [Wasmer 3.0](https://wasmer.io/posts/announcing-wasmer-3.0)
+- [WebAssembly: TinyGo vs Rust vs AssemblyScript](https://ecostack.dev/posts/wasm-tinygo-vs-rust-vs-assemblyscript/)
+- [The large, small, and dynamic viewport units](https://web.dev/viewport-units/)
+- [Node.js Architecture Pitfalls to Avoid](https://blog.appsignal.com/2022/11/23/nodejs-architecture-pitfalls-to-avoid.html)
+- [Cloudflare - Server-side render full stack applications with Pages Functions](https://blog.cloudflare.com/pages-full-stack-frameworks/)
+- [Vercel - Edge Config: Ultra-low latency data at the edge](https://vercel.com/blog/edge-config-ultra-low-latency-data-at-the-edge)
 
 ---
 
 ## 🤭 Fun {#fun}
 
+https://twitter.com/addyosmani/status/1595470573001314309
+
 https://twitter.com/t3dotgg/status/1595878903012552704
+
+https://twitter.com/dan_abramov/status/1595615054661140481
+
+https://twitter.com/ThePrimeagen/status/1595445811353206793
+
+https://twitter.com/dan_abramov/status/1595436113761558530
+
+https://twitter.com/Steve8708/status/1595434864974913538
+
+https://twitter.com/yangshunz/status/1597396102889644032
 
 [![alt](/emails/issues/122/meme.jpg)](https://twitter.com/todo)
