--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/126/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/126/index.mdx
@@ -136,13 +136,9 @@ Nous cherchons des développeurs(euses) JavaScript passionnés. Vous interviendr
 
 ## 🔀 Autre {#other}
 
-ESLint rewrite? https://twitter.com/kentcdodds/status/1595860611963170816
-
-[Octoverse 2022 - The state of open source software](https://octoverse.github.com/)
-
-[Advanced web font optimization techniques](https://pixelpoint.io/blog/advanced-web-font-optimization-techniques/)
-
 - [Agenda for the 93rd meeting of Ecma TC39](https://github.com/tc39/agendas/blob/main/2022/11.md): un meeting est en cours! Des nouvelles pour la semaine prochaine. La nouvelle proposal [Async Context](https://github.com/legendecas/proposal-async-context) m'intéresse particulièrement!
+- [Octoverse 2022 - The state of open source software](https://octoverse.github.com/)
+- [Advanced web font optimization techniques](https://pixelpoint.io/blog/advanced-web-font-optimization-techniques/)
 - [A first look at SolidStart](https://ajcwebdev.com/2022/11/20/a-first-look-at-solidstart/)
 - [How to split JavaScript strings into sentences, words or graphemes with "Intl.Segmenter"](https://www.stefanjudis.com/today-i-learned/how-to-split-javascript-strings-with-intl-segmenter/)
 - [How we lost our slick new npm package name (and then got it back)](https://reactflow.dev/blog/reactflow-npm-package-name/)
