--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/126/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/126/index.mdx
@@ -9,9 +9,13 @@ unlisted: true
 
 Salut à tous !
 
-Black friday job offers?
+C'est la fin du [Black Friday](https://thisweekinreact.com/black-friday), mais quelques offres sont encore valides.
 
-Pour info, il y a un nouveau meetup [React-Native Paris](https://www.meetup.com/fr-FR/meetup-group-xaaafwks/) avec une 1ere date (6 Décembre). Rejoignez aussi le Slack [React-Native Connection](https://reactnativeconnection.slack.com/). Il est probable qu'une conférence sur le développement mobile arrive prochainement 😜 et j'espère bien qu'une conf React fera également son retour!
+Si votre entreprise recrute, j'en profite également pour faire une [**promo de -50% sur les offres de sponsoring job offer**](https://thisweekinreact.com/sponsor#sponsor-jobs). N'hésitez pas à en parler à vos RH ou votre manager, ça m'aide beaucoup!
+
+Comme on pouvait s'en douter avec Thanksgiving, c'est une semaine plutôt calme en nouvelles React.
+
+Rappel: 1er meetup [React-Native Paris](https://www.meetup.com/fr-FR/meetup-group-xaaafwks/) le 6 Décembre ([Slack](https://reactnativeconnection.slack.com/)).
 
 <!-- truncate -->
 
@@ -42,8 +46,6 @@ FlyCode lit votre code React et trouve les textes, les images, les design tokens
 - Gardez le contrôle de votre base de code
 
 Vous pouvez commencer ici: [flycode.com/developers](https://www.flycode.com/developers)
-
-[![Yuzu is the Best Finance Data API for Frontends](/emails/issues/126/yuzu.png)](https://www.yuzu.dev/)
 
 ---
 
